--- a/themes/evolve/lessc/Drupal/inmotion.less
+++ b/themes/evolve/lessc/Drupal/inmotion.less
@@ -63,6 +63,9 @@
 				border: 0px #afaeae solid !important;
 				padding: 0;
 			}
+			.media_filter{
+				padding-top: 20px;
+			}
 		}
 
 		/* MOBILE BURGER MENU */
@@ -591,7 +594,9 @@
 						}
 						img{
 							width: 100%!important;
-    						height: auto!important;
+							height: auto!important;
+							margin: 0!important;
+							padding: 0!important;
 						}
 						p{
 							margin-bottom: 0!important;
@@ -638,7 +643,9 @@
 						}
 						img{
 							width: 100%!important;
-    						height: auto!important;
+							height: auto!important;
+							margin: 0!important;
+							padding: 0!important;
 						}
 						p{
 							margin-bottom: 0!important;
@@ -685,7 +692,9 @@
 						}
 						img{
 							width: 100%!important;
-    						height: auto!important;
+							height: auto!important;
+							margin: 0!important;
+							padding: 0!important;
 						}
 						p{
 							margin-bottom: 0!important;
